<resources>
    <string name="app_name">UserLogin</string>

    <!--登录页-->
    <string name="phone_number_Tittle">手机号</string>
    <string name="phone_number_default">请输入手机号码</string>
    <string name="password_Tittle">密码</string>
    <string name="password_default">请输入密码</string>
    <string name="login_button">登录</string>
    <string name="forget_password_textview">忘记密码</string>

    <!--注册&登录-->
    <string name="reset_password_textview">重设密码</string>
    <string name="register_textview">注册</string>

    <!--注册&登录页1-->
    <string name="login_textview">登录</string>
    <string name="get_verification_code_button">获取验证码</string>

    <!--注册&登录页2-->
    <string name="reget_verification_code_button">重新发送</string>
    <string name="count_down_button">%s s后重新发送</string>
    <string name="verification_default">请输入验证码</string>
    <string name="next_step_button">下一步</string>

    <!--注册&登录页3-->
    <string name="password_setting_default">请设置登录密码</string>
    <string name="password_input_hint">密码有6-20位字符组成，包含字母&amp;数字</string>
    <string name="finish_button">完成</string>

</resources>
