<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register.RegisterActivity2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y30"
        android:id="@+id/layout_top"
        android:background="@color/colorBackground"
        android:paddingLeft="@dimen/x22"
        android:paddingRight="@dimen/x22">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/x22"
            android:text="@string/register_textview"
            android:textColor="@color/color_default"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/RegisterTitle1"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y40"
        android:id="@+id/Register_layout_image"
        android:layout_below="@+id/layout_top">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/registerstep2"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y31"
        android:id="@+id/layout_verificationCode"
        android:paddingLeft="@dimen/x22"
        android:paddingRight="@dimen/x22"
        android:layout_below="@+id/Register_layout_image">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditText_VerificationCodeInput"
            android:layout_centerVertical="true"
            android:background="@null"
            android:textSize="@dimen/x14"
            android:hint="@string/verification_default" />

        <Button
            android:layout_width="@dimen/x98"
            android:layout_height="@dimen/y25"
            android:id="@+id/btn_ReGetVerificationCode"
            android:text="@string/get_verification_code_button"
            android:textSize="@dimen/x14"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorparameter3"
            android:background="@drawable/next_btn"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorline"
            android:layout_toLeftOf="@id/btn_GetVerificationCode"
            android:layout_marginRight="@dimen/x12"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>


    <scut.userlogin.CustomView.ButtonCheckBlank
        android:layout_width="match_parent"
        android:layout_height="@dimen/y25"
        android:layout_marginRight="@dimen/x22"
        android:layout_marginLeft="@dimen/x22"
        android:textSize="@dimen/x16"
        android:text="@string/next_step_button"
        android:id="@+id/btn_NextStep2"
        android:layout_below="@+id/layout_verificationCode"
        android:layout_marginTop="@dimen/y15"
        android:textColor="@color/colorparameter3"
        android:background="@drawable/next_btn"/>


</RelativeLayout>
