<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPassword.ResetPasswordActivity2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y30"
        android:id="@+id/layout_top"
        android:background="@color/colorBackground">

        <RelativeLayout
            android:id="@+id/layout_back"
            android:layout_alignParentLeft="true"
            android:layout_width="@dimen/x43"
            android:layout_height="@dimen/x43"
            android:layout_marginLeft="@dimen/x8"
            android:background="@drawable/back_btn">

            <Button
                android:id="@+id/back"
                android:layout_centerInParent="true"
                android:layout_width="@dimen/x10"
                android:layout_height="@dimen/y13"
                android:background="@mipmap/back"
                android:clickable="false"
                android:focusable="false" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/x22"
            android:text="@string/reset_password_textview"
            android:textColor="@color/color_default"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/RegisterTitle1"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y40"
        android:id="@+id/Register_layout_image"
        android:layout_below="@+id/layout_top">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/step2"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y31"
        android:id="@+id/layout_verificationCode"
        android:paddingLeft="@dimen/x22"
        android:paddingRight="@dimen/x22"
        android:layout_below="@+id/Register_layout_image">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditText_VerificationCodeInput"
            android:layout_centerVertical="true"
            android:background="@null"
            android:textSize="@dimen/x14"
            android:hint="@string/verification_default" />

        <scut.userlogin.CustomView.ButtonWithCountDown
            android:layout_width="@dimen/x98"
            android:layout_height="@dimen/y25"
            android:id="@+id/btn_ReGetVerificationCode"
            android:text="@string/get_verification_code_button"
            android:textSize="@dimen/x14"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorparameter3"
            android:background="@drawable/next_btn"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorline"
            android:layout_toLeftOf="@id/btn_GetVerificationCode"
            android:layout_marginRight="@dimen/x12"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>


    <scut.userlogin.CustomView.ButtonCheckBlank
        android:layout_width="match_parent"
        android:layout_height="@dimen/y25"
        android:layout_marginRight="@dimen/x22"
        android:layout_marginLeft="@dimen/x22"
        android:textSize="@dimen/x14"
        android:text="@string/next_step_button"
        android:id="@+id/btn_NextStep2"
        android:layout_below="@+id/layout_verificationCode"
        android:layout_marginTop="@dimen/y17"
        android:textColor="@drawable/next_btn_text_selector"
        android:background="@drawable/next_btn"/>

</RelativeLayout>
