<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPassword.ResetPasswordActivity1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y30"
        android:id="@+id/layout_top"
        android:background="@color/colorBackground"
        android:paddingLeft="@dimen/x22"
        android:paddingRight="@dimen/x22">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/x22"
            android:text="@string/reset_password_textview"
            android:textColor="@color/color_default"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/RegisterTitle1"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y40"
        android:id="@+id/Register_layout_image"
        android:layout_below="@+id/layout_top">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/step1"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y31"
        android:id="@+id/layout_phone_nunber"
        android:layout_below="@+id/Register_layout_image"
        android:paddingRight="@dimen/x22"
        android:paddingLeft="@dimen/x22">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditText_PhoneNumberInput"
            android:inputType="phone"
            android:textSize="@dimen/x14"
            android:background="@null"
            android:maxLength="11"
            android:hint="@string/phone_number_default"
            android:layout_centerInParent="true"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorline"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>


    <scut.userlogin.CustomView.ButtonCheckPhonenumber
        android:layout_width="match_parent"
        android:layout_height="@dimen/y25"
        android:layout_marginLeft="@dimen/x22"
        android:layout_marginRight="@dimen/x22"
        android:text="@string/get_verification_code_button"
        android:id="@+id/btn_GetVerificationCode"
        android:textSize="@dimen/x14"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/layout_phone_nunber"
        android:layout_marginTop="@dimen/y17"
        android:textColor="@color/colorparameter3"
        android:background="@drawable/next_btn"/>

</RelativeLayout>
